fix: overflow cont

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,12 +73,12 @@ a:active {
 .auth-cont {
     max-width: 364px;
     margin: auto;
-    overflow-y: auto;
 }
 .auth-form {
     background-color: #fff;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     border: 1px solid #ddd;
+    overflow: auto;
 }
 .auth-form .lead {
     font-size: 1.1rem;
